# CodeTogether

./: .env.example  .gitignore  DEPLOYMENT.md  README.md
.claude/: settings.json
bot/: Cargo.toml  Dockerfile
bot/src/: config.rs  main.rs
bot/src/client/: mod.rs  wrapper.rs
bot/src/commands/: approve.rs  mod.rs  project.rs  register.rs  share.rs  status.rs  task.rs
docker/: docker-compose.dev.yml  docker-compose.yml
scripts/: dev-setup.sh  dev-up.sh  scale-workers.sh
wrapper/: Dockerfile  pyproject.toml  requirements.txt
wrapper/src/wrapper/: __init__.py  config.py  main.py
wrapper/src/wrapper/api/: __init__.py  models.py  routes.py
wrapper/src/wrapper/claude/: __init__.py  executor.py  session.py
wrapper/src/wrapper/routing/: __init__.py  router.py
wrapper/src/wrapper/store/: __init__.py  projects.py  sessions.py  users.py
